# nexus-core

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  ENGINEERING.md  INTEGRATION.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nexus.prod.yaml.example  nexus.yaml.example  pyproject.toml
.github/workflows/: ci.yml
ai-engineer-book/: README.md  book.js  index.html  styles.css
anvay/graph/: extractor.py
anvay/ingest/: chunker.py
anvay/retrieval/: evidence.py
deploy/: Caddyfile
docs/: DEPLOYMENT.md  SLICE-1-STATUS.md  SLICE-2-STATUS.md  SLICE-3-STATUS.md  SLICE-4-STATUS.md  SLICE-5-STATUS.md  SLICE-6-STATUS.md  SLICE-7-STATUS.md  UI-CUTOVER-STATUS.md  product-system-intelligence-architecture.md
evals/: README.md  code_metrics.py  common.py  golden.jsonl  harness.py  metrics.py  run_code_eval.py  run_ragas.py
evals/judges/: __init__.py  llm.py
nexus/: cli.py  config.py  daemon.py  registry.py
nexus/api/: app.py  authz.py  deps.py
nexus/auth/: auth0.py  store.py
nexus/connectors/: confluence.py  jira.py  local_fs.py  manager.py  mcp_client.py
nexus/council/: change_request.py  errors.py  graph.py  queue.py  runner.py  skill_parser.py  state.py
nexus/graph/: __init__.py  context.py  extractor.py  impact.py  models.py  rag.py  store.py
nexus/ingest/: chunker.py  embedder.py  enricher.py  incremental.py  indexer.py  models.py  pipeline.py  relation_extractor.py  summaries.py
nexus/llm/: client.py  tracing.py
nexus/mcp_server/: meta_skill.md.j2  server.py  tools.py
nexus/observability/: otel.py
nexus/retrieval/: cache.py  circuit.py  classifier.py  evidence.py  graph.py  guard.py  hybrid.py  hyde.py  pipeline.py  reranker.py  sparse.py
nexus/setup/: __init__.py  bootstrap.py
outputs/: nexus-business-demo.pptx
scripts/: resilience-smoke.sh  serve-embedder.sh  serve-light-llm.sh  serve-reranker.sh
tests/: conftest.py  test_adversary_routing.py  test_agent_routes.py  test_approval.py  test_auth0_authz.py  test_auth_routes.py  test_auth_store.py  test_change_request_router.py  test_changelog_format.py  test_chunker.py  test_circuit.py  test_classifier.py  test_code_eval_pairwise.py  test_code_metrics.py  test_confluence_connector.py  test_council_failure.py  test_council_routes.py  test_council_routing.py  test_council_state.py  test_delete_product.py  test_delta_ingest.py  test_drafter_faithfulness.py  test_eval_metrics.py  test_evidence_retrieval.py  test_falkordb_graph_store.py  test_fixed_pack_council.py  test_golden_loader.py  test_graph_config.py  test_graph_context.py  test_graph_expand.py  test_graph_extractor.py  test_graph_impact.py  test_graph_rag.py  test_guard.py  test_jira_connector.py  test_llm_client.py  test_local_fs.py  test_metrics_routes.py  test_org_queue.py  test_pr_review_helpers.py  (+19 more)
(+33 files in other folders)
