[project]
name = "nexus"
version = "0.0.1"
description = "Sovereign, MCP-native skill server for codebases"
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nexus" }]

dependencies = [
    # Web stack
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    # Config + CLI
    "typer>=0.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "pyjwt[crypto]>=2.10",
    "python-dotenv>=1.0",
    "argon2-cffi>=23.1",
    # Storage
    "qdrant-client>=1.18,<1.19",
    "neo4j>=5.25",
    # MCP
    "mcp>=1.0",
    # Council orchestration
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    # Observability
    "langfuse>=2.50",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    # Git
    "gitpython>=3.1",
    # Templating
    "jinja2>=3.1",
    # Numerics
    "numpy>=2.0",
    # Ingestion: AST-aware chunking
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-kotlin>=1.1",
    "tree-sitter-solidity>=1.2",
    # Retrieval: BM25 sparse encoder
    "fastembed>=0.7",
    # Skills: YAML frontmatter
    "python-frontmatter>=1.1",
    "openai>=2.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]
evals = [
    "ragas>=0.2",
    "datasets>=3.0",
]

[project.scripts]
nexus = "nexus.cli:app"
nexus-mcp-server = "nexus.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer requires function calls in argument defaults — that's the API.
"nexus/cli.py" = ["B008"]
# FastAPI uses Depends(...) in argument defaults — that's the API.
"nexus/api/routes/*" = ["B008"]
# Eval runners build their default thresholds inline; the rule churns the API.
"evals/run_ragas.py" = ["B008"]
"evals/run_code_eval.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not eval and not live_e2e'"
markers = [
    "eval: offline retrieval-quality benchmark (requires Qdrant + embedder + reranker; skip by default)",
    "live_e2e: real live backend E2E (requires Qdrant + embedder + reranker + LLM; set NEXUS_LIVE_E2E=1)",
]
